--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,13 +31,15 @@ android:padding="24dp"
             android:orientation="horizontal">
 
             <Button
-                android:layout_width="116dp"
+                android:id="@+id/true_button"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
 
                 android:text="@string/true_button" />
 
             <Button
+                android:id="@+id/false_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/false_button"
