--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     android:background="@color/teal_200"
     android:gravity="center"
     android:orientation="vertical"
-    tools:context=".MainActivity">
+    tools:context="mike.kor.geoquizchallenge.MainActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
